# TP_HPC_4

./: CMakeLists.txt  README.md  exercice2.cpp  hpcOpenmpSchedule.cpp  stats.ods
exercice3/: CMakeLists.txt
exercice3/Src/: Camera.cpp  Camera.hpp  lr.cpp
